fix: Add z-index to burger menu

--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -68,6 +68,7 @@
     gap: 20px;
     position: fixed;
     background-color: var(--White);
+    z-index: 1000;
     .navbarLogo {
         margin-bottom: 20px;
     }
